Fixed nav-bar flickering issues, normalized the banner divs cross website, removed deprecated content page

--- a/style.css
+++ b/style.css
@@ -31,13 +31,11 @@ body {
 .nav-link-wrapper {
     height: 22px;
     border-bottom: 1px solid transparent;
-    transition: border-bottom 0.5s;
 }
 
 .nav-link-wrapper a {
     color: #eb908a;
     text-decoration: none;
-    transition: color 0.5s;
 }
 
 .brand > div {
@@ -227,29 +225,4 @@ img.photo {
 
 div.words {
     width: 100%;
-}
-.content-wrapper {
-    position: relative;
-    height: 300px;
-    width: 100%;
-    align-content: center;
-}
-.content-image-wrapper {
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height:300px;
-}
-
-.content-text-wrapper {
-    position: absolute;
-    top: 30px;
-    width: 100%;
-    height: 100%;
-}
-
-.content-header h1 {
-    text-align: center;
-    color: white;
-    font-size: 6em;
 }
